Done with all but clock

--- a/Project3/Makefile
+++ b/Project3/Makefile
@@ -1,6 +1,8 @@
 # Elom Worlanyo, ID: 419493 - Operating Systems Project 3
 # Tutor: Professor Lawrence Miller 
 
+all: vmsim vmgenU vmgenWS
+
 vmsim: vmsim.cpp utility.cpp vmsim.h utility.cpp
 	g++ vmsim.cpp utility.cpp -o vmsim
 
