--- a/Project3/Makefile
+++ b/Project3/Makefile
@@ -4,10 +4,10 @@
 all: vmsim vmgenU vmgenWS
 
 vmsim: vmsim.cpp utility.cpp vmsim.h utility.cpp
-	g++ vmsim.cpp utility.cpp -o vmsim
+	g++ -std=c++11 -Wall vmsim.cpp utility.cpp -o vmsim
 
 vmgenU: vmgenU.cpp vmgenU.h
-	g++ vmgenU.cpp -o vmgenU
+	g++ -std=c++11 -Wall vmgenU.cpp -o vmgenU
 
 vmgenWS: vmgenWS.cpp vmgenWS.h
-	g++ vmgenWS.cpp -o vmgenWS
+	g++ -std=c++11 -Wall vmgenWS.cpp -o vmgenWS
